fix alignment issues

--- a/app/assets/stylesheets/modules/_card.css.scss
+++ b/app/assets/stylesheets/modules/_card.css.scss
@@ -5,25 +5,26 @@
 //
 // *************************************
 
+.cards {
+  margin-left: -1%;
+  margin-right: -1%;
+}
 .card {
+  @include box-sizing(border-box);
   position: relative;
   float: left;
   height: 320px;
   margin-bottom: $base-whitespace;
+  padding-left: 1%;
+  padding-right: 1%;
   @media screen and (min-width: $l-min-medium) and (max-width: $l-max-large) {
-    width: 48%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 50%;
   }
   @media screen and (min-width: $l-min-large) and (max-width: $l-max-xlarge) {
-    width: 31.33%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 33.33333333333333%;
   }
   @include respond-to($l-min-xlarge) {
-    width: 24%;
-    margin-left: .5%;
-    margin-left: .5%;
+    width: 25%;
   }
   .widgets {
     @extend %group;
