--- a/app/assets/stylesheets/modules/_widgets.css.scss
+++ b/app/assets/stylesheets/modules/_widgets.css.scss
@@ -6,14 +6,19 @@
 // *************************************
 
 .widgets {
+  @include clearfix;
+  margin-left: -1%;
+  margin-right: -1%;
   li {
     @extend %l-cell;
     @include font-size(10px);
+    @include box-sizing(border-box);
     line-height: 1.2;
     margin-bottom: 1em;
-    margin-left: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
     text-align: center;
-    width: 18%;
+    width: 20%;
     img {
       margin: 0 auto .25em;
     }
@@ -27,13 +32,13 @@
 
 .widgets--small {
   li {
-    width: 50px;
+    width: 12.5%;
     height: 90px;
   }
 }
 
 .widgets--large {
   li {
-    width: 23%;
+    width: 25%;
   }
 }
